[package]
name = "double_dot_macro_derive"
version = "0.4.0"
edition = "2021"
authors = ["doubledotinteractive@gmail.com"]
description = "Procedural Derive Macros for the Double-Dot crate ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
homepage = "https://github.com/Double-Dot-Interactive/double_dot_macro_derive"
repository = "https://github.com/Double-Dot-Interactive/double_dot_macro_derive.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.43"
# double_dot_macro_types = { path = "../double_dot_macro_types"}
double_dot_macro_types = "0.1.0"

[lib]
proc-macro = true